Fix search bar spacing #42

--- a/web/css/stocks.css
+++ b/web/css/stocks.css
@@ -75,3 +75,7 @@ body {
   margin: 1px;
   color: white;
 }
+
+.col-lg-6 .input-group {
+	width:100%
+}
